--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "typescript": "^2.6.2",
+    "typescript-styled-plugin": "^0.2.2"
   }
 }
