dropdown and calendar

--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "flexboxgrid2": "^7.0.0-alpha12",
     "google-map-react": "^0.27.0",
     "lodash": "^4.17.4",
+    "moment": "^2.20.1",
     "normalize.css": "^7.0.0",
     "react": "^16.2.0",
+    "react-addons-shallow-compare": "^15.6.2",
+    "react-dates": "^16.0.2",
     "react-dom": "^16.2.0",
     "react-flexbox-grid": "^2.0.0",
     "react-router-dom": "^4.2.2",
