--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "react-dates": "^16.0.2",
     "react-dom": "^16.2.0",
     "react-flexbox-grid": "^2.0.0",
+    "react-helmet": "^5.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
+    "react-scrolllock": "^2.0.1",
     "styled-components": "^2.4.0"
   },
   "scripts": {
